--- a/src/script/style.css
+++ b/src/script/style.css
@@ -17,7 +17,7 @@
     --aguardando: #ed7e1c;
     --preparando: #edca1c;
     --postado: #2336c4;
-    --acaminho: #216eeb;
+    --acaminho: #4fb4e3;
     --entregue:#17bd48;
     --prateado: linear-gradient(135deg, #e0e0e0, #f1f1f1, #d1d1d1, #f1f1f1, #e0e0e0);
     --transparente: linear-gradient(360deg, #b8b8b85b, #ffffff); 
