--- a/src/script/style.css
+++ b/src/script/style.css
@@ -1351,6 +1351,29 @@ nav .btnmenu-mobile {
     color: var(--cor1);
 }
 
+/* HISTÓRICO DE PEDIDOS */
+#historico {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 25%;
+    margin-top: 20vh;
+    margin-bottom: 5vh;
+    min-height: 100vh;
+}
+
+#historico h1 {
+    display: flex;
+    align-items: center;
+    margin: 5px 0;
+    font-size: 2.8em;
+    color: var(--cor2);
+}
+
+#historico .pedidos {text-align: center;}
+
+#historico .pedidos h3 {font-size: 1.4em;}
+
 /* RODAPÉ */
 #rodape {
     display: flex;
